fix nav, align cases imgs

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
     font-size: 16px;
     color: #838994; 
     letter-spacing: 0.03em;
+    position: fixed;
     }
 
 .top-navigation > .content {
